# repodesk

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  podman_build.sh  podman_run.sh  repodesk-screenshots.md  screenshot.rs
.github/workflows/: ci.yml  docker.yml  release.yml
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/fs/tests/: integration.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/git/tests/: integration.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/search/tests/: integration.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  diff.rs  layout.rs  lib.rs  main.rs  palette.rs  snapshot.rs
docs/: Handover-State.md  plan.md  requirements.md
