[package]
name = "repodesk-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
readme = "../../README.md"
description = "TOML configuration loader for Repodesk terminal IDE"
license = "MIT"
repository = "https://github.com/roebi/repodesk"
homepage = "https://github.com/roebi/repodesk"
keywords = ["terminal", "config", "toml", "ide", "tui"]
categories = ["command-line-utilities", "development-tools"]
[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
