[package]
name = "repodesk-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
readme = "../../README.md"
description = "AppState and pure reducer for Repodesk terminal IDE"
license = "MIT"
repository = "https://github.com/roebi/repodesk"
homepage = "https://github.com/roebi/repodesk"
keywords = ["terminal", "state", "reducer", "ide", "tui"]
categories = ["command-line-utilities", "development-tools"]
[dependencies]
repodesk-commands = { path = "../commands", version = "0.1.0" }
repodesk-editor = { path = "../editor", version = "0.1.0" }
repodesk-git = { path = "../git", version = "0.1.0" }
