[package]
name = "repodesk-editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
readme = "../../README.md"
description = "Line-based editor buffer and cursor model for Repodesk terminal IDE"
license = "MIT"
repository = "https://github.com/roebi/repodesk"
homepage = "https://github.com/roebi/repodesk"
keywords = ["terminal", "editor", "buffer", "cursor", "tui"]
categories = ["command-line-utilities", "development-tools"]
