[package]
name = "repodesk-search"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
readme = "../../README.md"
description = "Exact and fuzzy file and content search for Repodesk terminal IDE"
license = "MIT"
repository = "https://github.com/roebi/repodesk"
homepage = "https://github.com/roebi/repodesk"
keywords = ["terminal", "search", "fuzzy", "grep", "tui"]
categories = ["command-line-utilities", "development-tools"]
