[package]
name = "repodesk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Terminal IDE for Git workflows in SSH and container environments. Rust-based."
license = "MIT"
repository = "https://github.com/roebi/repodesk"
homepage = "https://github.com/roebi/repodesk"
readme = "../../README.md"
keywords = ["terminal", "ide", "git", "ssh", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
repodesk-commands = { path = "../commands", version = "0.1.0" }
repodesk-core     = { path = "../core",     version = "0.1.0" }
repodesk-editor   = { path = "../editor",   version = "0.1.0" }
repodesk-git      = { path = "../git",      version = "0.1.0" }
repodesk-fs       = { path = "../fs",       version = "0.1.0" }
repodesk-config   = { path = "../config",   version = "0.1.0" }
crossterm = "0.26"

[[bin]]
name = "repodesk"
path = "src/main.rs"
